--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.8.1
 Django==3.1.12
-djangorestframework==3.16.0
+djangorestframework==3.12.4
 form==0.0.1
 mongoengine==0.29.1
 pillow==11.2.1
 pymongo==3.11.4
 pytz==2025.2
+sqlparse==0.5.3
+typing_extensions==4.14.0
